--- a/bokehjs/package.json
+++ b/bokehjs/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^8.10.15",
     "@types/mocha": "^5.2.0",
     "@types/chai": "^4.1.3",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/yargs": "^11.0.0",
     "@types/del": "^3.0.1",
     "@types/sinon": "^4.1.3",
